# MGM-CLIMATE-DATA-EXTRACTION_-COMSA

./: .gitignore  README.md  ankara_meteogram_csv.txt  ankara_meteogram_easy_to_read.txt  environment.yml  main.py  meteogram_extract.py  pyproject.toml
meteogram_extract/: cli.py  meteogram_extract.py
